improve tfsec analysis

--- a/.github/workflows/tfsec-analysis.yml
+++ b/.github/workflows/tfsec-analysis.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v2
 
+      - name: Run terraform init
+        run: terraform init
+
       - name: Run tfsec
         uses: tfsec/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
         with:
