--- a/examples/echoserver-NGINX-Egress.yaml
+++ b/examples/echoserver-NGINX-Egress.yaml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
   name: echoserver-ingress
   namespace: echoserver
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   rules:
     - http:
